[gd_scene load_steps=3 format=3 uid="uid://bwm5h0g8kxjbj"]

[ext_resource type="Script" path="res://scenes/ui/multiplayer_menu/multiplayer_menu.gd" id="1_multiplayer"]
[ext_resource type="PackedScene" uid="uid://by5xb5rkkyp5i" path="res://scenes/ui/sound_button.tscn" id="2_sound_button"]

[node name="MultiplayerMenu" type="CanvasLayer"]
script = ExtResource("1_multiplayer")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 24
text = "Multiplayer"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ready to play multiplayer"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HostButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_sound_button")]
unique_name_in_owner = true
layout_mode = 2
text = "Host Game"

[node name="JoinButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_sound_button")]
unique_name_in_owner = true
layout_mode = 2
text = "Quick Join"

[node name="LobbyBrowserButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_sound_button")]
unique_name_in_owner = true
layout_mode = 2
text = "Browse Lobbies"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_sound_button")]
unique_name_in_owner = true
layout_mode = 2
text = "Back"